Update EnableDisable feature

--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -10,7 +10,7 @@
             <li class="active"><a href="@routes.UpdateProfileController.showProfile">Profile</a></li>
             <li><a href="@routes.AssignmentController.showAssignments">View Assignment</a></li>
             <li><a href="@routes.AssignmentController.addAssignment">Add Assignment</a></li>
-            <li><a href="@routes.EnableDisableController.showUserList">View Users</a></li>
+            a<li><a href="@routes.EnableDisableController.showUserList">View Users</a></li>
             } else { @if(activeNav == "View Assignment") {
             <li><a href="@routes.UpdateProfileController.showProfile">Profile</a></li>
             <li class="active"><a href="@routes.AssignmentController.showAssignments">View Assignment</a></li>
