--- a/app/views/User.scala.html
+++ b/app/views/User.scala.html
@@ -1,5 +1,12 @@
 @(userForm :Form[Login])(implicit messages:Messages,flash:Flash)
-
+<div>
+<center>
+    <table class="table table-bordered" style="width:450px; text-align: center;">
+        <tr style="00back`ground-color:#0000cc; color:white;">
+            <th style="text-align: center;">Sign Up</th>
+        </tr>
+        <tr>
+            <td>
 @import helper._
 
 @main("Log In Page"){
@@ -8,9 +15,14 @@
 @helper.form(action=routes.ApplicationController.loginUser) {
 @helper.inputText(userForm("name"),'_showConstraints->false)
 @helper.inputText(userForm("email"),'_showConstraints->false)
-@helper.inputText(userForm("userPassword"),'_showConstraints->false)
+@helper.inputPassword(userForm("userPassword"),'_showConstraints->false)
 <button value="Submit">Submit</button>
 }
 
 
 }
+            </td>
+        </tr>
+    </table>
+</center>
+</div>
