--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,29 @@
-@()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+
+<div >
+    <center>
+        <table class="table table-bordered" style="width:450px; text-align: center;">
+            <tr style="00back`ground-color:#0000cc; color:white;">
+                <th style="text-align: center;">Sign Up</th>
+            </tr>
+            <tr>
+                <td>
+
+@import helper._
+
+@main("Welcome to Knoldus!") {
+<h1>Welcome!</h1>
+
+@form(action = routes.DisplayView.logIn) {
+<button type="submit">Login</button>
 }
+
+@form(action = routes.DisplayView.signUp) {
+<button type="submit">SignUp</button>
+}
+}
+                </td>
+            </tr>
+        </table>
+    </center>
+</div>
